# crontabula

./: README.md  pyproject.toml
.github/workflows/: tests.yaml
crontabula/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_parse.py
